objects/redwing__Survey_Page__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>redwing__Survey__c</referenceTo>
        <relationshipLabel>Survey Pages</relationshipLabel>
        <relationshipName>Survey_Pages</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Page</label>
    <nameField>
        <label>Survey Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Pages</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>